--- a/Compilador/Views/Editor.xaml
+++ b/Compilador/Views/Editor.xaml
@@ -5,8 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Gui.Views"
              xmlns:hc="https://handyorg.github.io/handycontrol" 
-             xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" xmlns:advertencias="clr-namespace:Gui.Advertencias"
-             mc:Ignorable="d"  x:Name="Me"
+             xmlns:avalonedit="http://icsharpcode.net/sharpdevelop/avalonedit" 
+             xmlns:advertencias="clr-namespace:Gui.Advertencias"
+             mc:Ignorable="d"  x:Name="Me" 
              d:DesignHeight="450" d:DesignWidth="800">
     <DockPanel>
         <ToolBarPanel ClipToBounds="True" DockPanel.Dock="Top" >
@@ -23,6 +24,9 @@
                         <Setter Property="CornerRadius" Value="0,0,0,0"/>
                     </Style>
                 </ToolBar.Resources>
+                <Button Click="InfoClick">
+                    <Image Source="/Gui;component/Images/info.png" Height="16"/>
+                </Button>
                 <Button Click="OpenFileClick">
                     <Image Source="/Gui;component/Images/Open.png" Height="16"/>
                 </Button>
